--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "shopblox-clone",
+  "name": "shopblox-gg",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -16,11 +16,13 @@
     "react-router-dom": "^6.22.3",
     "zustand": "^4.5.2",
     "framer-motion": "^11.0.8",
-    "sonner": "^1.4.3"
+    "sonner": "^1.4.3",
+    "canvas-confetti": "^1.9.2"
   },
   "devDependencies": {
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
+    "@types/canvas-confetti": "^1.6.4",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.18",
     "eslint": "^9.9.1",
