--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "zustand": "^4.5.2",
     "framer-motion": "^11.0.8",
     "sonner": "^1.4.3",
-    "canvas-confetti": "^1.9.2"
+    "canvas-confetti": "^1.9.2",
+    "helmet": "^7.1.0",
+    "dompurify": "^3.0.9"
   },
   "devDependencies": {
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@types/canvas-confetti": "^1.6.4",
+    "@types/dompurify": "^3.0.5",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.18",
     "eslint": "^9.9.1",
